@@ -1,5 +1,10 @@
 2008-05-11  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
 
+	Rewritten.
+	* src/TaggedItem.cc (toTagString)
+
+2008-05-11  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
+
 	Rewritten Accept-Features handling.
 	* src/HttpRequestCommand.cc (createHttpRequest)
 
